# nopencv

./: .gitignore  CMakeLists.txt  TutorialConfig.h.in  main.cpp
c_lib/: geom2d.hpp  nopencv.cpp  nopencv.hpp  svg_import_defs.h  temp.cpp  test.cpp
